--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   </main>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/lucasbailo" target="_blank" rel="noopener">Lucas Bailo</a>.
   </div>
   <script src="https://kit.fontawesome.com/eb4de64db4.js" crossorigin="anonymous"></script>
   <script src="./main.js"></script>
